ligolang/src/test/contracts/negative/parametric_types5.ligo
type foo(a,a) is a * a